Update geneseer-test-driver to 3.3.1
This fixes invalid UTF-16 strings in failure messages, which makes
Files.writeString safe again (the previous String.getBytes() workaround
was only masking the issue anyway).